# panzen

./: CMakeLists.txt  GNOME_Panzen.server.in  applet.c  panzen.c  panzen.h  window.c
