PROJECT(PANZEN C)

CMAKE_MINIMUM_REQUIRED(VERSION 2.4.6)
SET(CMAKE_ALLOW_LOOSE_LOOP_CONSTRUCTS 1)
INCLUDE(FindPkgConfig)

PKG_CHECK_MODULES(PANEL_APPLET REQUIRED libpanelapplet-2.0)

INCLUDE_DIRECTORIES(BEFORE ${PANEL_APPLET_INCLUDE_DIRS})
ADD_DEFINITIONS("-std=gnu99 -Wall -Winline -Werror")
ADD_DEFINITIONS(${PANEL_APPLET_CFLAGS_OTHER})

ADD_EXECUTABLE(panzen-applet panzen.c applet.c)
ADD_EXECUTABLE(panzen-window panzen.c window.c)

TARGET_LINK_LIBRARIES(panzen-applet 
	${PANEL_APPLET_LIBRARIES})

TARGET_LINK_LIBRARIES(panzen-window
	${PANEL_APPLET_LIBRARIES})

CONFIGURE_FILE(
	${CMAKE_CURRENT_SOURCE_DIR}/GNOME_Panzen.server.in
	${CMAKE_CURRENT_BINARY_DIR}/GNOME_Panzen.server
	@ONLY IMMEDIATE)

INSTALL(TARGETS panzen-applet RUNTIME DESTINATION bin)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/GNOME_Panzen.server
	    DESTINATION lib/bonobo/servers)
